--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,25 @@ python:
 
 sudo: false
 
+before_install:
+- openssl aes-256-cbc -K $encrypted_7ae2332c8772_key -iv $encrypted_7ae2332c8772_iv
+  -in key.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
+- eval $(ssh-agent)
+- ssh-add ~/.ssh/id_rsa
+- cp ssh_config ~/.ssh/config
+- git config --global user.name "Xuanwo"
+- git config --global user.email "xuanwo.cn@gmail.com"
+
 install:
 - pip install requests
 
 script:
-- grep -P -o "((http|ftp|https)://)(([a-zA-Z0-9\._-]+\.[a-zA-Z]{2,6})|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,4})*(/[a-zA-Z0-9\&%_\./-~-]*)?" README.md  > sites.txt
+- grep -P -o "((http|ftp|https)://)(([a-zA-Z0-9\._-]+\.[a-zA-Z]{2,6})|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,4})*(/[a-zA-Z0-9\&%_\./-~-]*)?"
+  README.md  > sites.txt
 - python3 webtest.py
+- git add --all
+- git commit -m "[ci skip] update badsite.json"
+- git push
+
+
