--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,9 @@ script:
 - grep -P -o "((http|ftp|https)://)(([a-zA-Z0-9\._-]+\.[a-zA-Z]{2,6})|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,4})*(/[a-zA-Z0-9\&%_\./-~-]*)?"
   README.md  > sites.txt
 - python3 webtest.py
+- git clone git@github.com:Xuanwo/WebsitesForStudents.git update
+- cp -f badsite.json update
+- cd update
 - git add --all
 - git commit -m "[ci skip] update badsite.json"
 - git push
-
-
